added main and logging views, their controllers

--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -16,9 +16,15 @@ security:
 
     firewalls:
         main:
-            pattern:    ^/
-            http_basic: ~
+            anonymous: ~
+            form_login:
+                login_path: login
+                check_path: login
+                default_target_path: main
             provider: our_db_provider
+            logout:
+                path:   /logout
+                target: /main
 
     access_control:
         - { path: ^/main, roles: IS_AUTHENTICATED_ANONYMOUSLY }
