--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -63,8 +63,22 @@ doctrine:
 
 # Swiftmailer Configuration
 swiftmailer:
-    transport: '%mailer_transport%'
-    host: '%mailer_host%'
-    username: '%mailer_user%'
-    password: '%mailer_password%'
-    spool: { type: memory }
+    transport: gmail
+    username:  '%mailer_user%'
+    password:  '%mailer_password%'
+
+fos_user:
+    db_driver: orm # other valid values are 'mongodb' and 'couchdb'
+    firewall_name: main
+    user_class: AppBundle\Entity\User
+    service:
+        mailer: fos_user.mailer.twig_swift
+    from_email:
+        address: catalogserverproject@gmail.com
+        sender_name: Demo App
+    resetting:
+        email:
+            template:   email/password_resetting.email.twig
+            from_email:
+                address:        catalogserverproject@gmail.com
+                sender_name:    Demo Resetting
